changed layout, added youtube video capability

--- a/env.example
+++ b/env.example
@@ -6,3 +6,6 @@ OPENAI_API_KEY = xxx
 GROQ_API_KEY = xxx
 GOOGLE_API_KEY = xxx
 HUGGINGFACE_ACCESS_TOKEN = xxx
+
+# MongoDB Configuration
+MONGO_DB_URI = xxx
