--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Danielle Hon"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.12,<3.13"
@@ -18,6 +19,20 @@ langchain-text-splitters = "^0.3.0"
 groq = "^0.11.0"
 tiktoken = "^0.7.0"
 google-generativeai = "^0.8.1"
+streamlit-authenticator = "^0.3.3"
+google-cloud-firestore = "^2.18.0"
+google-cloud = "^0.34.0"
+firebase-admin = "^6.5.0"
+httpx-oauth = "^0.15.1"
+st-login-form = "^1.1.0"
+pymongo = {extras = ["srv"], version = "^4.9.1"}
+contextforce-python = "^0.3.0"
+pinecone-text = "^0.9.0"
+langchain-community = "^0.3.1"
+pyrebase4 = "^4.8.0"
+nltk = "^3.9.1"
+youtube-transcript-api = "^0.6.2"
+pytube = "^15.0.0"
 
 
 [build-system]
