--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pyrebase4 = "^4.8.0"
 nltk = "^3.9.1"
 youtube-transcript-api = "^0.6.2"
 pytube = "^15.0.0"
+boto3 = "^1.35.33"
 
 
 [build-system]
