--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ nltk = "^3.9.1"
 youtube-transcript-api = "^0.6.2"
 pytube = "^15.0.0"
 boto3 = "^1.35.33"
+langchain = "^0.3.2"
 
 
 [build-system]
